# Utility-Analyzer

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: AGENT_GUIDE.md
src/: config.rs  main.rs
src/charts/: colormap.rs  cost_heatmap.rs  daily_heatmap.rs  daily_kwh.rs  export_sparklines.rs  gas_daily.rs  heatmap_base.rs  mod.rs  profile.rs  weekday_heatmap.rs
src/data/: electric.rs  gas.rs  loader.rs  mod.rs
src/ui/: components.rs  mod.rs  styles.rs  utils.rs  window.rs
